tests/negative/gold/ambiguous-lambda-test.gold
tests/negative/ambiguous-lambda-test.toit:12:9: error: Ambiguous resolution of 'foo'
  bar:: foo  // Ambiguous import.
        ^~~
tests/negative/ambiguous-a.toit:5:1: note: Resolution candidate for 'foo'
foo:
^~~
tests/negative/ambiguous-b.toit:5:1: note: Resolution candidate for 'foo'
foo:
^~~
Compilation failed
